--- a/Movies.UnitTesting/Movies.UnitTesting.csproj
+++ b/Movies.UnitTesting/Movies.UnitTesting.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="2.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.HttpsPolicy" Version="2.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.1.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.0" />
     <PackageReference Include="MockQueryable.Moq" Version="1.0.2" />
     <PackageReference Include="Moq" Version="4.9.0" />
@@ -17,10 +21,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Movies\Movies.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Integration\" />
   </ItemGroup>
 
 </Project>
