--- a/Movies/Movies.csproj
+++ b/Movies/Movies.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.1" />
+    <PackageReference Include="NSwag.AspNetCore" Version="11.18.6" />
   </ItemGroup>
 
 </Project>
